# tax-calculator

./: .gitignore  MANUAL_E1KV_RECONCILIATION.md  MANUAL_E1KV_RECONCILIATION_2025.md  README.md  TODO.md  WHAT_SHOULD_I_DO.md  main.py  pyproject.toml
docs/: finanzonline-loss-offset.md  reits-taxation.md  schd-tlt-austria-2025-2026-note.md
docs/glossary/: README.md  core-app.md  non-reporting-funds.md  reporting-funds.md
scripts/: __init__.py
scripts/ibkr_basis_builder/: cli.py  workflow.py
scripts/manual_e1kv_input/: cli.py  workflow.py
scripts/non_reporting_funds_exit/: README.md  __init__.py  cli.py  freedom_lots.py  ibkr_lots.py  workflow.py
scripts/reporting_funds/: README.md  __init__.py  cli.py  ibkr_source.py  models.py  oekb_csv.py  workflow.py
src/: broker_history.py  const.py  currencies.py  finanzonline.py  ibkr.py  moving_average.py  precision.py  tax_lots.py  utils.py  writer.py
src/legacy/: __init__.py  tax_lots.py
src/pdf/: tax_report.py
src/providers/: freedom.py  ibkr.py  revolut.py  wise.py
tax_automation/: __init__.py  broker_history.py  const.py  currencies.py  exceptions.py  finanzonline.py  moving_average.py  utils.py  writer.py
tax_automation/legacy/: tax_lots.py
tax_automation/pdf/: tax_report.py
tests/: conftest.py  test_currencies.py  test_finanzonline.py  test_freedom.py  test_ibkr.py  test_ibkr_basis_builder.py  test_main.py  test_manual_e1kv_input.py  test_non_reporting_funds_exit.py  test_non_reporting_funds_exit_ibkr.py  test_reporting_funds.py  test_revolut.py  test_utils.py  test_wise.py
(+12 files in other folders)
