[tool.poetry]
name = "tax-automation"
version = "0.1.0"
description = ""
authors = ["Eugene K. <eugene.kosharnyi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.3.0"
polars = "^1.18.0"
requests = "^2.32.3"
reportlab = "^4.2.5"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
